lab1/Test/L1-A-9-52.cmm
struct c1Ewlm2DvVdBvSHZZ {
  struct _E806wD7 Bx0k74V94qiYA8 ;
}wDPuUIO ( ) {
  float myr4i49V2E 
  struct JDY12AW GIU5Brkd_TncsvRF ;
  if ( I0gB )   while ( rBzqjqxmZ )   RPYeK0I5tSIctab6b 
    ;

else {
    int TmBIya8 [ 658470605 ] , = FfixOs = e2R > ! 
      - C_4NfB082pwXeY5zjby ( YpTa , f8IOR7LNv0az8 || Kx_sP7 
      && dk == SSNRn6Z55y + XW / kH9f4KR40TVMJi6iK [ W = 
      iKBy4_KNBsDXG3 = po0z1NLiRQnx || ef8LyXjuoh5axJOPiB7T 
      && NoFkzD3FTWSC < cUFK4MTh + ( V4yCAR8Ra38STI = _KLpNhi5 
      >= - ( G0LIkj8AyRQtS76_yb58 = VYfz / ( BOlfHAAA_ && 
      AiIwuMFrdjrIhEoIrJu <= I ) . kwOIPMGT_oQcUlzqZ9 ) 
      * IL_uGSvInMaH0RP53A . _ABiG4Vn + ! ! nEZNRt3TCX9PlqOD 
      * ! 1275694743 ) != 622701213.1720115147 . dToE2t3TOb 
      - ! BKkD1z185BvhsuJFEj ] * - - A4jLsDfVBXHht ( ) ) 
      . TGcT8kqOdiW ;
  }
}
int ;
int CTfG_1 
;
struct ;
struct F9WQAmZmVFRECnxeel ;
struct DTsVvn5UTiwKkz5rPU ;
struct U6FIC1dZ ;
struct {
}huAw 
;
int kl_rxM5d , glxmQU 

;
int ;
int XCkR0_VVlstA4V ( int BELK4XMy8ntpLR7 , int batcFHkspWAI0aZgJ 
  ) {
}
int MbiP5tWBCrHIWrTc ( ) {
  o9xbgUaZ8_QPgP ;
  if ( wEWR15dGd9vPo )   v35iRblRWwzo8EI ;
else   if ( Hb283yhVDaxA4XhI0dRd )   return CJG0lx83zhcv7pxY 
    ;


}
int ;
